2008-01-08  Dan Williams  <dcbw@redhat.com>

	* src/applet-compat.c
		- (copy_one_wpa_private_key_password): really don't convert entries that
			were already converted

2008-01-08  Dan Williams  <dcbw@redhat.com>

	* src/applet-compat.h
		- Add prototype for nma_compat_move_wpa_eap_passwords()

2008-01-07  Dan Williams  <dcbw@redhat.com>

	* src/applet-compat.c
		- (copy_one_wpa_private_key_password): don't convert entries that
			were already converted

2008-01-07  Dan Williams  <dcbw@redhat.com>

	Fix gnome.org #359541, rh #220913, rh #220915

	* src/applet.c
		- (nma_get_instance): call compat functions to fix up WPA-EAP password
			entries

	* src/applet-compat.c
		- (copy_one_wpa_private_key_password): new function; copy the WPA
			private key password to the new keyring item
		- (copy_one_wpa_password): new function; copy the WPA user password
			from GConf to the keyring and delete the GConf entry
		- (nma_compat_move_wpa_eap_passwords): new function; move the WPA
			password from GConf (where it's unobfuscated) to the Gnome Keyring

	* src/nm-gconf-wso.h
	  src/nm-gconf-wso.c
		- (nm_gconf_wso_read_secrets, real_read_secrets): new function; let
			subclasses handle reading their own secrets, but provide a default
			implementation that gets the default key
		- (nm_gconf_wso_write_secrets, real_write_secrets): new function; let
			subclasses handle writing their own secrets to the keyring, but
			provide a default implementation that writes the default key

	* src/nm-gconf-wso-wpa-eap.c
		- (nm_gconf_wso_wpa_eap_new_deserialize_dbus, real_serialize_dbus): the
			default secret should be the WPA password, not the private key
			password
		- (nm_gconf_wso_wpa_eap_new_deserialize_gconf): don't read the WPA
			password out of GConf
		- (real_serialize_gconf): don't write the WPA password to GConf
		- (real_read_secrets): read both the WPA password and the private key
			password from the keyring