@@ -459,7 +459,6 @@ void nma_other_network_dialog_run (NMApplet *applet, gboolean create_network)
 	g_signal_connect (dialog, "response", G_CALLBACK (nma_ond_response_cb), NULL);
 
 	gtk_window_set_position (GTK_WINDOW (dialog), GTK_WIN_POS_CENTER_ALWAYS);
-	gtk_widget_realize (dialog);
-	gdk_x11_window_set_user_time (dialog->window, gtk_get_current_event_time ());
+	gdk_x11_window_set_user_time (dialog->window, gdk_x11_get_server_time (dialog->window));
 	gtk_window_present (GTK_WINDOW (dialog));
 }
